playback speed fixed on mobile

--- a/public/css/template3mobile.css
+++ b/public/css/template3mobile.css
@@ -4980,7 +4980,7 @@
   letter-spacing: 0.43px;
   color: #ffffff;
   opacity: 0.8;
-  padding-top: 20px;
+  padding-top: 10px;
   padding-left: 36px;
 
   cursor: pointer;
